--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ font-weight: bold;
             max-width: 500px;
             margin: auto;
 background: none;
+            text-shadow:0 3px 6px #a5ffd8;
+
             border-radius: 10px;
         }
         .active {
